--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -16,5 +16,5 @@ jobs:
           FTP_USERNAME: ${{ secrets.FTP_USERNAME }} 
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }} 
           LOCAL_DIR: ./                           
-          REMOTE_DIR: "home/fertility/www/kuonkeibi.fertility.co.jp/wp-content/themes/kuonkeibi/"
+          REMOTE_DIR: "fertility/www/kuonkeibi.fertility.co.jp/wp-content/themes/kuonkeibi/"
 
